blockchain/k8s/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-node-deployment
  namespace: ksox-finance
  labels:
    app: blockchain-node
spec:
  selector:
    matchLabels:
      app: blockchain-node
  template:
    metadata:
      labels:
        app: blockchain-node
    spec:
      containers:
        - name: blockchain-node
          image: registry.internal.visoft.solutions/blockchain-node:v0.1.0-164-g8a360d6
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  name: blockchain-node-service
  namespace: ksox-finance
spec:
  selector:
    app: blockchain-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockchain-node-ingress
  namespace: ksox-finance
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: ingress-nginx
  tls:
    - hosts:
        - node.ksox.finance
      secretName: ksox-finance-tls
  rules:
    - host: node.ksox.finance
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: blockchain-node-service
                port:
                  number: 80
